# tad

./: .gitignore  NOTICE  README.md  RUN_VIS_GUIDE.md  eval.py  pyproject.toml  run_vis.py  setup.py  train.py
assets/: wandb_export_2026-02-03T22_06_26.613+08_00.csv
configs/: demo.yaml
configs/actionformer/: 1.yaml  thumos_i3d.yaml
configs/ddiou/: anet_tsp.yaml  ego4d_egovlp.yaml  ego4d_slowfast.yaml  epic_kitchens_slowfast_noun.yaml  epic_kitchens_slowfast_verb.yaml  fineaction_videomaev2_g.yaml  hacs_slowfast.yaml  thumos_i3d.yaml  thumos_videomaev2_g.yaml
configs/dyfadet/: anet_tsp.yaml  fineaction_videomaev2_g.yaml  hacs_slowfast.yaml  thumos_videomaev2_g.yaml  thumos_videomaev2_g_raw.py
configs/temp/: anet_tsp.yaml  ego4d_egovlp.yaml  epic_kitchens_slowfast_noun.yaml  epic_kitchens_slowfast_verb.yaml  fineaction_videomaev2_g.yaml  hacs_slowfast.yaml
opentad/: config.py
opentad/datasets/: anet.py  dataset.py  ego4d.py  epic_kitchens.py
opentad/engine/: __init__.py  optimizer.py  runner.py  scheduler.py
opentad/evaluation/: mAP.py  recall.py
opentad/metrics/: recall.py
opentad/models/: __init__.py  actionformer_head.py  actionformer_proj.py  anchor_free_head.py  backbone_wrapper.py  base.py  builder.py  decoupled_iou_head.py  detector.py  dyfadet.py  dyne_proj.py  focal_loss.py  gdk_proj.py  iou_loss.py  mamba_proj.py  point_generator.py  single_stage.py
opentad/utils/: __init__.py  checkpoint.py  load_config.py  logger.py  misc.py  wandb_config.py
opentad/visualization/: cosine_similarity_heatmap.py  loss.py  map_heatmap.py
tad/: __init__.py
tad/datasets/: __init__.py  anet.py  builder.py  dataset.py  ego4d.py  epic_kitchens.py  thumos.py  util.py
tad/engine/: __init__.py  optimizer.py  runner.py  scheduler.py
tad/metrics/: __init__.py  builder.py  mAP.py  map.py  recall.py  util.py
tad/models/: __init__.py  actionformer_head.py  actionformer_proj.py  anchor_free_head.py  backbone_wrapper.py  builder.py  decoupled_iou_head.py  detector.py  dyfadet.py  dyn_head.py  dyne_proj.py  focal_loss.py  fpn.py  gdk_proj.py  losses.py  mamba_proj.py  (+1 more)
temp/: model_analysis.py  wandb_config.py  使用梯子.md
tools/: eval.py  find_lr.py  run_vis.py  train.py
visualization/: cosine_similarity_heatmap.py  layer-wise_cka_similarity_heatmap.py  loss.py  loss_plot.py  map_heatmap.py  sampling_offsets.py  scatter.py  scatter_plot.py  vis_real_heatmap.py
(+109 files in other folders)
