[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddiou"
version = "1.0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "pyyaml",
    "tqdm",
    "mmengine",
    "wandb",
    "scipy",
    "einops",
    "pandas",
    "ninja",
    "imgaug",
]

[tool.setuptools.packages.find]
include = ["ddiou*"]

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true # ruff check --fix
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "W", "N", "F", "I", "C90", "B", "RUF", "UP", "YTT"]
