[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddiou"
version = "1.0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "pyyaml",
    "tqdm",
    "mmengine",
    "wandb",
    "scipy",
    "einops",
    "pandas",
    "ninja",
    "imgaug",
]

[tool.setuptools.packages.find]
include = ["ddiou*"]

[tool.ruff]
line-length = 100 # default is 88, but we use 100 to be consistent with black
target-version = "py311"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "W", "N", "T10", "F", "I", "C90", "B", "RUF", "UP", "YTT"]
# ignore = ["RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 10 # default is 10
