[build-system]
requires = ["setuptools>=82.0.1", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "ddiou"
version = "1.0"
readme = "README.md"
requires-python = ">=3.11.9"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=2.4.1",
    "pyyaml>=6.0.2",
    "tqdm>=4.65.2",
    "wandb>=0.23.1",
    "scipy>=1.15.3",
    "einops>=0.8.1",
    "pandas>=2.3.3",
    "ninja>=1.13.0",
    "imgaug>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
]

[tool.setuptools.packages.find]
include = ["ddiou*"]

[tool.ruff]
line-length = 100 # default is 88, but we use 100 to be consistent with black
target-version = "py311"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "W", "N", "T10", "F", "I", "C90", "B", "RUF", "UP", "YTT"]
# ignore = ["RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 10 # default is 10